// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid yaml invalid0.vhdl-linter.yml 1`] = `
[
  {
    "message": "This yaml does not match the schema for vhdl-linter settings: Properties key-not-allowed are not allowed!",
    "range": {
      "end": {
        "character": 50,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;

exports[`invalid yaml invalid1.vhdl-linter.yml 1`] = `
[
  {
    "message": "This yaml does not match the schema for vhdl-linter settings: /trace/server: must be equal to one of the allowed values (off,messages,verbose)",
    "range": {
      "end": {
        "character": 50,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;

exports[`invalid yaml invalid2.vhdl-linter.yml 1`] = `
[
  {
    "message": "This yaml does not match the schema for vhdl-linter settings: /trace/server: must be string (string)",
    "range": {
      "end": {
        "character": 50,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;

exports[`invalid yaml invalid3.vhdl-linter.yml 1`] = `
[
  {
    "message": "This yaml does not match the schema for vhdl-linter settings: /paths/additional: must be array (array)",
    "range": {
      "end": {
        "character": 50,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;

exports[`invalid yaml invalid4.vhdl-linter.yml 1`] = `
[
  {
    "message": "This yaml does not match the schema for vhdl-linter settings: /paths/additional/1: must be string (string)",
    "range": {
      "end": {
        "character": 50,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;

exports[`invalid yaml invalid5.vhdl-linter.yml 1`] = `
[
  {
    "message": "This yaml does not match the schema for vhdl-linter settings: /analysis/conditionalAnalysis/banana: must be string (string)",
    "range": {
      "end": {
        "character": 50,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;

exports[`invalid yaml invalid6.vhdl-linter.yml 1`] = `
[
  {
    "message": "Not valid yaml: Flow map must end with a } at line 1, column 23:

{ this is invalid yaml
                      ^
",
    "range": {
      "end": {
        "character": 23,
        "line": 0,
      },
      "start": {
        "character": 22,
        "line": 0,
      },
    },
    "severity": 1,
  },
]
`;
